Added the ability to Edit and Delete RoadShoulder locations via the in game developer menu. Residence's do not have this option yet. Added the Tag property to the Checkpoint class, for object storing.

--- a/AgencyDispatchFramework/AgencyDispatchFramework.csproj
+++ b/AgencyDispatchFramework/AgencyDispatchFramework.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Game\NativeMemory.cs" />
     <Compile Include="Game\PedVariationMeta.cs" />
     <Compile Include="NativeUI\DutyPluginMenu.cs" />
+    <Compile Include="NativeUI\LocationUIStatus.cs" />
     <Compile Include="NativeUI\PluginMenuPartials\RoadUIMenu.cs" />
     <Compile Include="Simulation\Agency\EmsAgency.cs" />
     <Compile Include="Simulation\Agency\FireAgency.cs" />
